# Amaya-curated

./: README.md
additional_materials/code-stats/: commitsDataManuallyCorrected.xlsx  linesAndFilesCount.xlsx  ~$commitsDataManuallyCorrected.xlsx
additional_materials/scientific_articles/: Amaya-Testbed-Note-28-10-1997.html  An-Introduction-to-Amaya-Note-20-01-1997.html
browsable_source/Amaya-1-0b/kaffe-0.8.4/: Makefile.in  README  configure.in
browsable_source/Amaya-1-0b/kaffe-0.8.4/NOTES/: BUGS  POST
browsable_source/Amaya-1-0b/kaffe-0.8.4/config/: config-hacks.h  config-std.h
browsable_source/Amaya-1-0b/kaffe-0.8.4/config/alpha/: jit-alpha.def  jit-icode.h  threads.c
browsable_source/Amaya-1-0b/kaffe-0.8.4/config/alpha/linux/: jit-md.h
browsable_source/Amaya-1-0b/kaffe-0.8.4/config/alpha/osf/: md.c  md.h
browsable_source/Amaya-1-0b/kaffe-0.8.4/config/arm/: threads.c  threads.h
browsable_source/Amaya-1-0b/kaffe-0.8.4/config/i386/: jit-i386.def  jit-icode.h
browsable_source/Amaya-1-0b/kaffe-0.8.4/config/i386/bsdi/: md.h
browsable_source/Amaya-1-0b/kaffe-0.8.4/config/i386/dgux/: jit-md.h  md.c  md.h
browsable_source/Amaya-1-0b/kaffe-0.8.4/config/i386/freebsd2/: jit-md.h
browsable_source/Amaya-1-0b/kaffe-0.8.4/config/i386/linux/: md.c
browsable_source/Amaya-1-0b/kaffe-0.8.4/config/i386/netbsd1/: md.c  md.h
browsable_source/Amaya-1-0b/kaffe-0.8.4/config/i386/nextstep3/: md.c  md.h
browsable_source/Amaya-1-0b/kaffe-0.8.4/config/i386/openbsd2/: md.c
browsable_source/Amaya-1-0b/kaffe-0.8.4/config/i386/sco3.2v5/: md.c  md.h
browsable_source/Amaya-1-0b/kaffe-0.8.4/config/i386/solaris2/: jit-md.h
browsable_source/Amaya-1-0b/kaffe-0.8.4/config/i386/univel_svr4/: md.c
browsable_source/Amaya-1-0b/kaffe-0.8.4/config/i386/win32/cygnus/: jit-md.h
browsable_source/Amaya-1-0b/kaffe-0.8.4/config/m68k/: jit-icode.h  jit-m68k.def  jit.h
browsable_source/Amaya-1-0b/kaffe-0.8.4/config/m68k/a-ux/: md.h
browsable_source/Amaya-1-0b/kaffe-0.8.4/config/m68k/amigaos/: BUGS.amiga  REPORT.amiga  md.c  md.h  threads.h
browsable_source/Amaya-1-0b/kaffe-0.8.4/config/m68k/netbsd1/: md.h
browsable_source/Amaya-1-0b/kaffe-0.8.4/config/m68k/sunos4/: md.c  md.h
browsable_source/Amaya-1-0b/kaffe-0.8.4/config/mips/: mips.c  threads.h
browsable_source/Amaya-1-0b/kaffe-0.8.4/config/mips/irix5/: md.h
browsable_source/Amaya-1-0b/kaffe-0.8.4/config/mips/irix6/: md.c
browsable_source/Amaya-1-0b/kaffe-0.8.4/config/mips/netbsd1/: md.h
browsable_source/Amaya-1-0b/kaffe-0.8.4/config/parisc/hpux/: md.h
browsable_source/Amaya-1-0b/kaffe-0.8.4/config/powerpc/: threads.h
browsable_source/Amaya-1-0b/kaffe-0.8.4/config/powerpc/aix/: md.h
browsable_source/Amaya-1-0b/kaffe-0.8.4/config/sparc/: jit-sparc.def
browsable_source/Amaya-1-0b/kaffe-0.8.4/config/sparc/linux/: md.h
browsable_source/Amaya-1-0b/kaffe-0.8.4/config/sparc/nextstep3/: jit-md.h-notyet  md.h
browsable_source/Amaya-1-0b/kaffe-0.8.4/config/sparc/solaris2/: md.c
browsable_source/Amaya-1-0b/kaffe-0.8.4/config/sparc/sunos/: md.h
browsable_source/Amaya-1-0b/kaffe-0.8.4/config/sparc/uxpds/: jit-md.h  md.h
browsable_source/Amaya-1-0b/kaffe-0.8.4/kaffe/kaffe/: Makefile.in
browsable_source/Amaya-1-0b/kaffe-0.8.4/kaffe/kaffeh/: Makefile.in  constants.c  readClassConfig.h
browsable_source/Amaya-1-0b/kaffe-0.8.4/kaffe/kaffevm/: access.h  baseClasses.h  bytecode.h  classMethod.h  code-analyse.h  code.c  code.h  constants.c  constants.h  errors.h  exception.c  exception.h  external.c  file.h  flags.h  gc-incremental.c  gc-malloc.c  gc.c  itypes.c  itypes.h  kaffe.def  libkaffe_vm.def  lookup.h  readClass.c  readClass.h  readClassConfig.h  soft.c  soft.h  support.h  thread.h  threadCalls.c  threadCalls.h
browsable_source/Amaya-1-0b/kaffe-0.8.4/kaffe/kaffevm/intrp/: Makefile.frag  checks.h  icode.h  machine.c  slots.h
browsable_source/Amaya-1-0b/kaffe-0.8.4/kaffe/kaffevm/jit/: Makefile.frag  basecode.h  funcs.c  machine.c  machine.h  registers.c  seq.c  slots.h
browsable_source/Amaya-1-0b/kaffe-0.8.4/kaffe/scripts/: appletviewer  report-kaffe-bug
browsable_source/Amaya-1-0b/kaffe-0.8.4/test/: Makefile.in
browsable_source/Amaya-1-0b/kaffe-0.8.4/test/benchmarks/jbyte/app/class/: .gdbinit  CMD
browsable_source/Amaya-1-0b/kaffe-0.8.4/test/benchmarks/jbyte/app/src/: AssignmentTest.java  BitOpsTest.java  EMFloatTest.java  HuffmanTest.java  LuTest.java
browsable_source/Amaya-1-0b/kaffe-0.8.4/test/benchmarks/jbyte/applet/src/: AssignmentTest.java  BMglobals.java  BitOpsTest.java  EMFloatTest.java  ErrorDialog.java  IDEATest.java  LuTest.java  NumericSortTest.java  ResultsFrame.java  StringSortTest.java  jBYTEmark.html
browsable_source/Amaya-1-0b/kaffe-0.8.4/test/benchmarks/jbyte/docs/: BDOC.TXT  JAPPEND.TXT
browsable_source/Amaya-1-0b/kaffe-0.8.4/test/benchmarks/symantec/: BidirectionalBubbleSortAlgorithm.java  BubbleSortAlgorithm.java  Dhrystone.java  QSortAlgorithm.java  RunTests.java  Sieve.java  SortItem.java  Tree.java  jit_pa.html
browsable_source/Amaya-1-0b/kaffe-0.8.4/test/exceptions/: NullTest2.java  TestExMain.java  divTest.java
browsable_source/Amaya-1-0b/kaffe-0.8.4/test/file/: Main.java  dirlist.java
browsable_source/Amaya-1-0b/kaffe-0.8.4/test/floats/: Flt.java  Flt3.java  Flt4.java  Flt5.java  Flt6.java  Flt7.java  FltSqr.java  KaffeDivErr.java  TV.java  inf.java
browsable_source/Amaya-1-0b/kaffe-0.8.4/test/general/: DateTest2.java  ExecTest.java  java_class.java
browsable_source/Amaya-1-0b/kaffe-0.8.4/test/longs/: Long1.java  Long2.java
browsable_source/Amaya-1-0b/kaffe-0.8.4/test/network/: socktest.java  whatip2.java
browsable_source/Amaya-1-0b/kaffe-0.8.4/test/regression/: TestScript  ttest.java
browsable_source/Amaya-1-0b/kaffe-0.8.4/test/strings/: TestArray.java
browsable_source/Amaya-1-0b/kaffe-0.8.4/test/threads/: MyThreadLauncher.java  T3.java  Thrd2.java  ThreadFreeBug.java  condtest.java  sleepers.java
metadata/: actors.md  catalogue.md  codemeta.json  journal.md  version_history.csv
software_stories/: StoryInventory.md
(+527 files in other folders)
